[gd_scene format=3 uid="uid://242wuanbuwxl"]

[ext_resource type="Texture2D" uid="uid://buay0ppkl8sw" path="res://Assets/BaseCharacter/peasant1.png" id="1_c2wo7"]
[ext_resource type="Script" uid="uid://blqudvgtrbfar" path="res://Scenes/makeup.gd" id="3_bscsq"]
[ext_resource type="Texture2D" uid="uid://bxpxhyd0yrah4" path="res://Assets/Tools/torturemaskcoloured.png" id="4_bscsq"]
[ext_resource type="Texture2D" uid="uid://cc275aqqhansk" path="res://Assets/BaseCharacter/peasant1_nice.png" id="4_tqory"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bscsq"]
size = Vector2(689.493, 861.8663)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ca14"]
size = Vector2(185.06406, 221.19933)

[node name="Phase3_Dressup" type="Node" unique_id=1334551469]

[node name="Character" type="Node2D" parent="." unique_id=485698924]
position = Vector2(708, 63)
scale = Vector2(0.20225139, 0.20225139)

[node name="Peasant" type="Sprite2D" parent="Character" unique_id=1725946111 groups=["face"]]
position = Vector2(1320.6442, 2301.8457)
scale = Vector2(5.910613, 5.910613)
texture = ExtResource("1_c2wo7")

[node name="Peasant1Nice" type="Sprite2D" parent="Character" unique_id=1386077922 groups=["niceface"]]
visible = false
position = Vector2(1305.3059, 1112.4769)
scale = Vector2(5.852516, 5.896535)
texture = ExtResource("4_tqory")

[node name="Area2D" type="Area2D" parent="Character" unique_id=188009309 groups=["face"]]
position = Vector2(13.2595215, 2206.3772)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Area2D" unique_id=1491269843]
position = Vector2(1282.158, -841.73895)
scale = Vector2(0.20000002, 0.20000002)
shape = SubResource("RectangleShape2D_bscsq")

[node name="Makeup" type="Area2D" parent="." unique_id=1210850125]
position = Vector2(297, 331.99997)
scale = Vector2(0.14601523, 0.1495703)
script = ExtResource("3_bscsq")

[node name="MakeupImage" type="Sprite2D" parent="Makeup" unique_id=145813167]
position = Vector2(-12.974976, 0)
scale = Vector2(2.517302, 2.517302)
texture = ExtResource("4_bscsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Makeup" unique_id=156445775]
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_0ca14")

[node name="Makeup2" type="Area2D" parent="." unique_id=1593685305]
position = Vector2(972.00006, 281)
scale = Vector2(0.021320447, 0.022371275)
script = ExtResource("3_bscsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Makeup2" unique_id=447066351]
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_0ca14")

[connection signal="area_entered" from="Makeup" to="Makeup" method="_on_area_entered"]
[connection signal="area_entered" from="Makeup2" to="Makeup2" method="_on_area_entered"]
